--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="author" content="GameSync" />
     <meta name="keywords" content="gaming, discord, community, free games, gaming news, game recommendations" />
     
+    <link rel="icon" href="favicon.ico" sizes="any">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
