--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <meta property="og:title" content="GameSync - Gaming Discord Community" />
     <meta property="og:description" content="Join GameSync, the ultimate gaming Discord community for news, free games, and personalized recommendations." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.pngq" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@gamesync" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.pngq" />
   </head>
 
   <body>
