--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>GameSync - Gaming Discord Community</title>
     <meta name="description" content="Join GameSync, the ultimate gaming Discord community for news, free games, and personalized recommendations. Connect with 5,000+ gamers worldwide." />
     <meta name="author" content="GameSync" />
-    <meta name="keywords" content="gaming, discord, community, free games, gaming news, game recommendations" />
+    <meta name="keywords" content="gaming, discord, community, free games, gaming news, game recommendations" /
 
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -20,6 +21,8 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@gamesync" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.pngq" />
+
+    <link rel="shortcut icon" type="x-icon" href="Game.jpeg">
   </head>
 
   <body>
