--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>GameSync - Gaming Discord Community</title>
     <meta name="description" content="Join GameSync, the ultimate gaming Discord community for news, free games, and personalized recommendations. Connect with 5,000+ gamers worldwide." />
     <meta name="author" content="GameSync" />
-    <meta name="keywords" content="gaming, discord, community, free games, gaming news, game recommendations" /
+    <meta name="keywords" content="gaming, discord, community, free games, gaming news, game recommendations" />
 
-    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -16,12 +15,11 @@
     <meta property="og:title" content="GameSync - Gaming Discord Community" />
     <meta property="og:description" content="Join GameSync, the ultimate gaming Discord community for news, free games, and personalized recommendations." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.pngq" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@gamesync" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.pngq" />
-
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
